frontend/src/pages/BehaviourMapping.css
* {
    margin: 0;
    padding: 0;
}

.behaviour-mapping{
    display: flex;
    flex-direction: row;
    font-size: xx-large;
    height: 100%;
    width: 100%;
}

.ol-attribution {
    size: 2px;
    right: 30px;
    width: 30px;
    height: 30px;
    font-size: 20px;
}

.sidebar {
    display: flex;
    width: 200px;
    order: 1;
    background-color: #222020;
    color: #ece8e8;
}

.sidebar ul {
    list-style-type: none;
    width: 100%;
    order: 2;
}

.sidebar li{
    width: 100%;
    border-bottom: 2px #58A4B0 solid;
    transition: 200ms;
    cursor: pointer;
    text-align: center;
    margin-top: 10px;
}

.buttonLi{
    height: 30px;
    color: #ece8e8;
    background-color: #222020;
    border-bottom: 2px #58A4B0 solid;
    min-width: 200px;
}
.bigButtonLi{
    height: 60px;
    color: #ece8e8;
    background-color: #222020;
    min-width: 200px;
}
.finishProjectLi {
    position: absolute;
    border-top: 2px #58A4B0 solid;
    bottom: 0;
}
.finishProjectLi p {
    color: #befe9e;
}
#addEventLi {
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 0;
    font-size: 1.4em;
}
.changeSizeContainer{
    display: flex;
    justify-content: center;
}
.changeSize {
    width: 100px;
    font-size: 2em;
}
.changeSize:active {
    width: 100px;
    font-size: 2em;
    border: 1px solid;
}
.sidebar a {
    color: #ece8e8;
}

#input-li {
    display: 'none';
}

#arcgis-input {
    height: 20px;
    display: 'none';
}

.zoom-button {
    min-width: 80px;
    margin-right: 10px;
}

#icon-list {
    position: relative;
    width: 200px;
    height: 100vh;
    overflow: auto;
}
#favorite-icon-list{
    width: 200px;
    max-height: 200px;
    overflow: auto;
}

.map{   
    display: flex;
    width: 100%;
    height: 100vh;
    order: 2;
}

.visible {
    display: block;
}

.invisible {
    display: none; 
}

.textBox {
    display: flex;
    flex-direction: row;
    height: 100%;
    flex-wrap: wrap;
    font-size: 48%;
    text-align: center;
}

/*ModImg*/

#maincont {
    display: flex;
}
.screenshot-div {
    order: 3;
}
.map-image {
    height: 100vh;
    width: calc(100vw - 200px);
    min-height: 300px;
    min-width: 400px;
    /* height: 600px;
    width: 600px;*/
    order: 3;
}
.uploaded-map-image {
    height: 100vh;
    width: auto;
    order: 3;
}

#canvas {
    border: 1px solid black;
    background-color: blue;
    display: none;
}

#downlaod {
    display: none;
}

.icon {
    color: #ece8e8;
    position:absolute;
    top:-100px; 
    left:-100px;
}

/* .visible {
    order: 1;
} */

.background-image {
    order: 2;
}

.help{ 
    position: absolute;
    bottom: 0px;
    right: 8px;
    font-size: 33px;
    color: #222020;
    cursor: pointer;
    opacity: 0.8;
}
.helper-image{
    position: absolute;
    left: 240px;
    height: 400px;
}

